<resources>
    <string name="app_name">MetaQuotesAssignment</string>
    <string name="text_file_url">TEXT FILE URL</string>
    <string name="line_selection_filter">LINE SELECTION FILTER (optional)</string>
    <string name="process">PROCESS</string>

    <string name="res_success">success</string>

    <string name="res_error">failed</string>

    <string name="back_slash">/</string>

    <string name="error_mess">An error occurred while processing you data, please try again later.</string>

    <string name="file_name">sample.txt</string>

    <string name="file_type">text/plain</string>

    <string name="http">http</string>

    <string name="https">https</string>

    <string name="enter_valid_url">Please enter a valid URL. \n\nExpected https:// or http://</string>

    <string name="file_type_log">log</string>

    <string name="field_required">"This field is required."</string>

    <string name="file_name_res">results.log</string>

    <string name="file_name_logs">exceptions.log</string>

    <string name="add_url_act_ttle">Enters File URL</string>

    <string name="text_copied">Text copied to clipboard</string>

    <string name="text_copied_label">label</string>

    <string name="view_data_act_ttle">View Processed Data</string>
    <string name="top_bar_title">Top Bar Title</string>

    <string name="provide_storage">"Please provide a storage media and try again."</string>

    <string name="permission_denied">Permission Denied.</string>

    <string name="permission_granted">Permission Granted.</string>
    <string name="text_file_url_low_caps">*text file url</string>
    <string name="line_selection_filter_low_caps">line selection filter</string>
    <string name="please_wait_a_moment">Please wait a moment...</string>
    <string name="metaquotes_assignment">MetaQuotes Assignment</string>
    <string name="the_log_file_does_not_exist">The log file does not exist.</string>
    <string name="copy">Copy</string>



    <!-- Exceptions (Error) Log Titles-->
    <string name="get_file_from_folder">Get file from folder : </string>
</resources>