<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.AddTextFileUrl">

    <RelativeLayout
        android:background="@color/grey"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rl_top_bar_main_act">

        <LinearLayout
            android:id="@+id/llTopBar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/top_bar_back"
                android:layout_marginStart="10dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/arrow_back"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

            <TextView
                android:id="@+id/top_bar_title"
                android:layout_marginStart="6dp"
                android:textColor="@color/black"
                android:text="@string/top_bar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"/>



        </LinearLayout>
        
        <View
            android:layout_below="@+id/llTopBar"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"/>

    </RelativeLayout>


    <LinearLayout
        android:layout_below="@+id/rl_top_bar_main_act"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_file_url_low_caps"/>

        <EditText
            android:gravity="center_vertical"
            android:id="@+id/edt_txt_file_url"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/round_bcg"
            android:hint="@string/text_file_url"
            android:textSize="18sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />




        <TextView
            android:textColor="@color/black"
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/line_selection_filter_low_caps"/>

        <EditText
            android:id="@+id/edt_line_select_filter"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/round_bcg"
            android:hint="@string/line_selection_filter"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:paddingStart="10dp" />

    </LinearLayout>


    <Button
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="35dp"
        android:text="@string/process"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/btn_download_and_process_data"
        android:background="@drawable/round_bcg"/>

</RelativeLayout>